--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <title>Zoomers Zoom</title>
   </head>
 
