--- a/app/src/components/App/App.module.scss
+++ b/app/src/components/App/App.module.scss
@@ -15,6 +15,11 @@
   }
 }
 
+.flex {
+  display: inline-block;
+  margin: auto;
+}
+
 .stock-search-container {
   width: 100%;
   display: flex;
@@ -32,4 +37,8 @@
   height: 700px;
   text-align: center;
   border: 5px solid black;
+}
+
+.main-heading {
+  margin-bottom: 10px !important;
 }
