--- a/app/src/components/App/App.module.scss
+++ b/app/src/components/App/App.module.scss
@@ -42,3 +42,9 @@
 .main-heading {
   margin-bottom: 10px !important;
 }
+
+.selected-stock {
+  display: block;
+  margin-top: 20px !important;
+  text-align: center !important;
+}
