--- a/app/src/components/App/App.module.scss
+++ b/app/src/components/App/App.module.scss
@@ -48,3 +48,16 @@
   margin-top: 20px !important;
   text-align: center !important;
 }
+
+.my-portfolio {
+  font-size: 36pt;
+  color: #3f51b5;
+}
+
+.stock-list {
+  max-height: 70vh;
+}
+
+.stock-text {
+  color: #3f51b5;
+}
